--- a/blog-app-apis/src/main/resources/application.properties
+++ b/blog-app-apis/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl.auto=update
 spring.jpa.show-sql=true
-#spring.servlet.multipart.max-file-size=10MB
-#spring.servlet.multipart.max-request-size=10MB
+
+#File related all configs-
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+project.image=images/
 #logging.level.org.springframework.security=DEBUG
